[gd_scene load_steps=11 format=2]

[ext_resource path="res://HPplus.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shop.gd" type="Script" id=2]
[ext_resource path="res://MaxHPplus.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpeedPlus.tscn" type="PackedScene" id=4]
[ext_resource path="res://RotationPLus.tscn" type="PackedScene" id=5]
[ext_resource path="res://ShotSpeedPlus.tscn" type="PackedScene" id=6]
[ext_resource path="res://ShotPlus.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.176471, 0.0823529, 0.388235, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0313726, 0.0235294, 0.152941, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.0627451, 0.254902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[node name="Shop" type="MarginContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -250.0
margin_right = 300.0
margin_bottom = 250.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 600.0
margin_bottom = 500.0
custom_constants/separation = 30
alignment = 1

[node name="ShopLabel" type="Label" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 87.0
text = "MEGAAAAAA SHOOOOOOPPPP!!!!!!!!!!!!!!!!"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_left = 98.0
margin_top = 117.0
margin_right = 502.0
margin_bottom = 383.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="HPplus" parent="VBoxContainer/GridContainer" instance=ExtResource( 1 )]

[node name="MaxHPplus" parent="VBoxContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 138.0
margin_right = 266.0

[node name="SpeedPlus" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
margin_left = 276.0
margin_right = 404.0
disabled = true

[node name="RotationPLus" parent="VBoxContainer/GridContainer" instance=ExtResource( 5 )]
margin_top = 138.0
margin_bottom = 266.0
disabled = true

[node name="ShotSpeedPlus" parent="VBoxContainer/GridContainer" instance=ExtResource( 6 )]
margin_left = 138.0
margin_top = 138.0
margin_right = 266.0
margin_bottom = 266.0

[node name="ShotPlus" parent="VBoxContainer/GridContainer" instance=ExtResource( 7 )]
margin_left = 276.0
margin_top = 138.0
margin_right = 404.0
margin_bottom = 266.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 234.0
margin_top = 413.0
margin_right = 365.0
margin_bottom = 442.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
text = "START!!!!!!!!!!!"
